--- a/public/index.html
+++ b/public/index.html
@@ -12,16 +12,25 @@
     <meta name="keywords" content="dalthon,mamani,hualpa,d4iton,daiton100mh" />
     <meta name="title" content="Dalthon.mamani" />
     <meta name="author" content="Dalthon Mamani Hualpa" />
-    
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120240513-2"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-120240513-2"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'UA-120240513-2');
+      gtag("config", "UA-120240513-2");
     </script>
 
     <!--
